--- a/blogpost.html
+++ b/blogpost.html
@@ -5,12 +5,12 @@
     </head>
     <body>
         <div id="container">
-            Cabecera
-        </div>
             <div id="cabecera">
+                Hyperblog
+                <span id="tagline">Tu blog de confianza</span>
+            </div>
             <div id="post">
-                <h1>Este es el título atractivo e interesante del post</h1>
-                
+                <h1>Este es el título atractivo e interesante del post</h1>         
                 <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir informacion y tus ideas.
                     Mucho mas que ir a conferencias o salir en youtbue. 
@@ -18,7 +18,6 @@
                     por ahora.
                 </p>
             </div>
-        </div>
-        
+        </div>  
     </body>
 </html>
